--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trang Demo CSS Responsive</title>
   <!-- Liên kết file CSS -->
-  <link rel="stylesheet" href="index2.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Navbar -->
@@ -25,3 +25,4 @@
   </div>
 </body>
 </html>
+
